deploy: f426e8e2a48c5b3cae4005a4939bf5ce362796fa

--- a/tutorials/e_electric_fields.ipynb
+++ b/tutorials/e_electric_fields.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "406f0d9a",
+   "id": "74f708bf",
    "metadata": {},
    "source": [
     "# Electric Fields\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a72bfa97",
+   "id": "26cdce1c",
    "metadata": {},
    "source": [
     "\n",
@@ -22,13 +22,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "825d9d70",
+   "id": "1fe01423",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:02.593041Z",
-     "iopub.status.busy": "2025-02-03T15:20:02.592857Z",
-     "iopub.status.idle": "2025-02-03T15:20:03.722383Z",
-     "shell.execute_reply": "2025-02-03T15:20:03.721275Z"
+     "iopub.execute_input": "2025-02-03T15:40:30.800708Z",
+     "iopub.status.busy": "2025-02-03T15:40:30.800532Z",
+     "iopub.status.idle": "2025-02-03T15:40:31.887790Z",
+     "shell.execute_reply": "2025-02-03T15:40:31.886617Z"
     }
    },
    "outputs": [
@@ -43,7 +43,7 @@
       "\n",
       "    Args:\n",
       "        amplitudes: electric field amplitudes in xyz-components\n",
-      "        frequency: frequency\n",
+      "        frequency: angular frequency\n",
       "\n",
       "    Returns:\n",
       "       Function that computes the electric field as a functon of time\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66965895",
+   "id": "ea25473f",
    "metadata": {},
    "source": [
     "So, calling \"Wave\" gives back a function we can evaluate at single points in time"
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6ad0d622",
+   "id": "9b4f246d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:03.724909Z",
-     "iopub.status.busy": "2025-02-03T15:20:03.724628Z",
-     "iopub.status.idle": "2025-02-03T15:20:03.802290Z",
-     "shell.execute_reply": "2025-02-03T15:20:03.801665Z"
+     "iopub.execute_input": "2025-02-03T15:40:31.890323Z",
+     "iopub.status.busy": "2025-02-03T15:40:31.890054Z",
+     "iopub.status.idle": "2025-02-03T15:40:31.963504Z",
+     "shell.execute_reply": "2025-02-03T15:40:31.962876Z"
     }
    },
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4008bd3",
+   "id": "77bb9fa1",
    "metadata": {},
    "source": [
     "A quick way to visualize them is to plot them (by default, GRANAD considers real fields). To evaluate the electric field in many points, we need to vectorize it to obtain an array of results. JAX offers the vmap function that vectorizes the application."
@@ -105,13 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8949bf51",
+   "id": "6442447e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:03.804251Z",
-     "iopub.status.busy": "2025-02-03T15:20:03.803897Z",
-     "iopub.status.idle": "2025-02-03T15:20:03.892819Z",
-     "shell.execute_reply": "2025-02-03T15:20:03.892286Z"
+     "iopub.execute_input": "2025-02-03T15:40:31.965359Z",
+     "iopub.status.busy": "2025-02-03T15:40:31.965163Z",
+     "iopub.status.idle": "2025-02-03T15:40:32.049545Z",
+     "shell.execute_reply": "2025-02-03T15:40:32.049024Z"
     }
    },
    "outputs": [
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9699d1c1",
+   "id": "5d9c41ec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:03.894763Z",
-     "iopub.status.busy": "2025-02-03T15:20:03.894396Z",
-     "iopub.status.idle": "2025-02-03T15:20:04.533208Z",
-     "shell.execute_reply": "2025-02-03T15:20:04.532572Z"
+     "iopub.execute_input": "2025-02-03T15:40:32.051470Z",
+     "iopub.status.busy": "2025-02-03T15:40:32.051287Z",
+     "iopub.status.idle": "2025-02-03T15:40:32.653725Z",
+     "shell.execute_reply": "2025-02-03T15:40:32.653122Z"
     }
    },
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d66b2a2",
+   "id": "dec13a56",
    "metadata": {},
    "source": [
     "The `Ramp` electric field introduces a ramping effect to the field amplitude. \n",
@@ -174,13 +174,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5be0ad16",
+   "id": "39a76cbd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:04.535220Z",
-     "iopub.status.busy": "2025-02-03T15:20:04.534995Z",
-     "iopub.status.idle": "2025-02-03T15:20:04.984616Z",
-     "shell.execute_reply": "2025-02-03T15:20:04.983982Z"
+     "iopub.execute_input": "2025-02-03T15:40:32.655731Z",
+     "iopub.status.busy": "2025-02-03T15:40:32.655381Z",
+     "iopub.status.idle": "2025-02-03T15:40:33.094895Z",
+     "shell.execute_reply": "2025-02-03T15:40:33.094308Z"
     }
    },
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3442f5d5",
+   "id": "0d103015",
    "metadata": {},
    "source": [
     "The `Pulse` electric field introduces a temporally localized oscillation using a Gaussian envelope.\n",
@@ -222,13 +222,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "46eeeebd",
+   "id": "26ba3983",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:04.986521Z",
-     "iopub.status.busy": "2025-02-03T15:20:04.986333Z",
-     "iopub.status.idle": "2025-02-03T15:20:05.259564Z",
-     "shell.execute_reply": "2025-02-03T15:20:05.258956Z"
+     "iopub.execute_input": "2025-02-03T15:40:33.096850Z",
+     "iopub.status.busy": "2025-02-03T15:40:33.096505Z",
+     "iopub.status.idle": "2025-02-03T15:40:33.364493Z",
+     "shell.execute_reply": "2025-02-03T15:40:33.363946Z"
     },
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "546890cd",
+   "id": "1a327fbf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db04f5d",
+   "id": "9b5465c1",
    "metadata": {},
    "outputs": [],
    "source": []
