--- a/tutorials/j_defining_materials.ipynb
+++ b/tutorials/j_defining_materials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a8b2fd93",
+   "id": "9284f6d8",
    "metadata": {},
    "source": [
     "# Defining Materials\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160fba7d",
+   "id": "4a07684a",
    "metadata": {},
    "source": [
     "## Defining a custom material\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "108f372a",
+   "id": "aee4eea5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:35.825600Z",
-     "iopub.status.busy": "2025-02-03T15:20:35.825342Z",
-     "iopub.status.idle": "2025-02-03T15:20:36.946815Z",
-     "shell.execute_reply": "2025-02-03T15:20:36.945575Z"
+     "iopub.execute_input": "2025-02-03T15:41:04.724186Z",
+     "iopub.status.busy": "2025-02-03T15:41:04.724010Z",
+     "iopub.status.idle": "2025-02-03T15:41:05.829051Z",
+     "shell.execute_reply": "2025-02-03T15:41:05.827838Z"
     }
    },
    "outputs": [
@@ -95,22 +95,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "492f2190",
+   "id": "a40fe592",
    "metadata": {},
    "source": [
-    "So, the Material class essentially defines a small language we can use to specify a material. A preliminary, work-in-progress version of the Hubbard model would look like this"
+    "The Material class offers all specialized functions to specify a material from a TB model. A preliminary, work-in-progress version of the Hubbard model would look like this"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "755fff0e",
+   "id": "94c4dc29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:36.949434Z",
-     "iopub.status.busy": "2025-02-03T15:20:36.949129Z",
-     "iopub.status.idle": "2025-02-03T15:20:36.990471Z",
-     "shell.execute_reply": "2025-02-03T15:20:36.989865Z"
+     "iopub.execute_input": "2025-02-03T15:41:05.831610Z",
+     "iopub.status.busy": "2025-02-03T15:41:05.831325Z",
+     "iopub.status.idle": "2025-02-03T15:41:05.873869Z",
+     "shell.execute_reply": "2025-02-03T15:41:05.873357Z"
     }
    },
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd7becd",
+   "id": "d4abc068",
    "metadata": {},
    "source": [
     "To see how cutting finite flakes from this 3D material works, let's inspect"
@@ -158,13 +158,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c61725dc",
+   "id": "3945d10a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:36.992760Z",
-     "iopub.status.busy": "2025-02-03T15:20:36.992577Z",
-     "iopub.status.idle": "2025-02-03T15:20:36.996412Z",
-     "shell.execute_reply": "2025-02-03T15:20:36.995768Z"
+     "iopub.execute_input": "2025-02-03T15:41:05.876422Z",
+     "iopub.status.busy": "2025-02-03T15:41:05.875951Z",
+     "iopub.status.idle": "2025-02-03T15:41:05.879951Z",
+     "shell.execute_reply": "2025-02-03T15:41:05.879274Z"
     }
    },
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "086bcaeb",
+   "id": "d66609b5",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. We have specified a 3D material, so let's look at the function that is applied"
@@ -208,13 +208,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bed3f314",
+   "id": "bc13e948",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:36.998177Z",
-     "iopub.status.busy": "2025-02-03T15:20:36.998000Z",
-     "iopub.status.idle": "2025-02-03T15:20:37.002042Z",
-     "shell.execute_reply": "2025-02-03T15:20:37.001387Z"
+     "iopub.execute_input": "2025-02-03T15:41:05.881617Z",
+     "iopub.status.busy": "2025-02-03T15:41:05.881455Z",
+     "iopub.status.idle": "2025-02-03T15:41:05.884613Z",
+     "shell.execute_reply": "2025-02-03T15:41:05.884129Z"
     }
    },
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49431603",
+   "id": "4cc76dc1",
    "metadata": {},
    "source": [
     "Let's see this in action"
@@ -264,13 +264,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d147c25",
+   "id": "e92f7af7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:37.003793Z",
-     "iopub.status.busy": "2025-02-03T15:20:37.003455Z",
-     "iopub.status.idle": "2025-02-03T15:20:38.723694Z",
-     "shell.execute_reply": "2025-02-03T15:20:38.723222Z"
+     "iopub.execute_input": "2025-02-03T15:41:05.886444Z",
+     "iopub.status.busy": "2025-02-03T15:41:05.886107Z",
+     "iopub.status.idle": "2025-02-03T15:41:07.566622Z",
+     "shell.execute_reply": "2025-02-03T15:41:07.565747Z"
     }
    },
    "outputs": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba280712",
+   "id": "601f4299",
    "metadata": {},
    "source": [
     "## Direction-dependent couplings"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db84bb85",
+   "id": "fe5c38ce",
    "metadata": {},
    "source": [
     "Up to now, we have only considered couplings dependent on the scalar distance between two orbitals.\n",
@@ -320,13 +320,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bd63c358",
+   "id": "89488872",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:38.726385Z",
-     "iopub.status.busy": "2025-02-03T15:20:38.726015Z",
-     "iopub.status.idle": "2025-02-03T15:20:38.927849Z",
-     "shell.execute_reply": "2025-02-03T15:20:38.927226Z"
+     "iopub.execute_input": "2025-02-03T15:41:07.569521Z",
+     "iopub.status.busy": "2025-02-03T15:41:07.568870Z",
+     "iopub.status.idle": "2025-02-03T15:41:07.772259Z",
+     "shell.execute_reply": "2025-02-03T15:41:07.771582Z"
     }
    },
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37c28b2",
+   "id": "1948fefa",
    "metadata": {},
    "source": [
     "We now display the edge state"
@@ -407,13 +407,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aad6b53e",
+   "id": "13a59aa0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:38.930091Z",
-     "iopub.status.busy": "2025-02-03T15:20:38.929891Z",
-     "iopub.status.idle": "2025-02-03T15:20:47.427171Z",
-     "shell.execute_reply": "2025-02-03T15:20:47.426557Z"
+     "iopub.execute_input": "2025-02-03T15:41:07.774530Z",
+     "iopub.status.busy": "2025-02-03T15:41:07.774165Z",
+     "iopub.status.idle": "2025-02-03T15:41:15.640313Z",
+     "shell.execute_reply": "2025-02-03T15:41:15.639720Z"
     },
     "lines_to_next_cell": 2
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a128cbb2",
+   "id": "68d0a802",
    "metadata": {},
    "source": [
     "## Modifying existing materials"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e974a9",
+   "id": "ab7153ed",
    "metadata": {},
    "source": [
     "You can copy the material you want to modify and change/overwrite its attributes.\n",
@@ -456,13 +456,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0303cdf2",
+   "id": "1f40f3a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:47.429367Z",
-     "iopub.status.busy": "2025-02-03T15:20:47.428982Z",
-     "iopub.status.idle": "2025-02-03T15:20:47.445766Z",
-     "shell.execute_reply": "2025-02-03T15:20:47.445266Z"
+     "iopub.execute_input": "2025-02-03T15:41:15.642198Z",
+     "iopub.status.busy": "2025-02-03T15:41:15.642012Z",
+     "iopub.status.idle": "2025-02-03T15:41:15.658455Z",
+     "shell.execute_reply": "2025-02-03T15:41:15.657854Z"
     }
    },
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0968858",
+   "id": "a59fe3fa",
    "metadata": {},
    "source": [
     "## Handling non-periodic dimensions"
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60e7390a",
+   "id": "d2d62ad8",
    "metadata": {},
    "source": [
     "Say you want to have a custom ssh chain with 2 atoms in the unit cell, but displace one of the atoms in y-direction. You do this by including a second basis vector in y-direction and give the atom you want to displace a non-vanishing y-coordinate. To not get a 2D lattice, you have to specify explicitly which direction(s) you want to be periodically repeated."
@@ -526,13 +526,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0ea75844",
+   "id": "14886a33",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:47.447879Z",
-     "iopub.status.busy": "2025-02-03T15:20:47.447504Z",
-     "iopub.status.idle": "2025-02-03T15:20:51.445170Z",
-     "shell.execute_reply": "2025-02-03T15:20:51.444549Z"
+     "iopub.execute_input": "2025-02-03T15:41:15.660269Z",
+     "iopub.status.busy": "2025-02-03T15:41:15.660086Z",
+     "iopub.status.idle": "2025-02-03T15:41:19.260373Z",
+     "shell.execute_reply": "2025-02-03T15:41:19.259734Z"
     },
     "lines_to_next_cell": 0
    },
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f0fc0d",
+   "id": "29bc689c",
    "metadata": {
     "lines_to_next_cell": 2
    },
