--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d29e60ca",
+   "id": "f317a749",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ae1245",
+   "id": "e12ce47d",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb548de",
+   "id": "87b1c6b7",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20b5a71",
+   "id": "ca60ec91",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4c8a4b",
+   "id": "ca682f37",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eec95195",
+   "id": "71c2edcb",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4fcc934b",
+   "id": "afbfee4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:23.214587Z",
-     "iopub.status.busy": "2025-02-03T15:20:23.214405Z",
-     "iopub.status.idle": "2025-02-03T15:20:26.357677Z",
-     "shell.execute_reply": "2025-02-03T15:20:26.357042Z"
+     "iopub.execute_input": "2025-02-03T15:40:51.525753Z",
+     "iopub.status.busy": "2025-02-03T15:40:51.525565Z",
+     "iopub.status.idle": "2025-02-03T15:40:54.891635Z",
+     "shell.execute_reply": "2025-02-03T15:40:54.891024Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "145f46b2",
+   "id": "80aceac9",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a933594",
+   "id": "12f627a5",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff90f443",
+   "id": "e5d72919",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162d71a4",
+   "id": "dd3736ca",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd99440a",
+   "id": "6c5878ac",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bea21dd2",
+   "id": "02dcdcc4",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba9b4211",
+   "id": "d4ba4091",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d33d15",
+   "id": "bb410c17",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "acf20f0e",
+   "id": "f4df06e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:26.360166Z",
-     "iopub.status.busy": "2025-02-03T15:20:26.359656Z",
-     "iopub.status.idle": "2025-02-03T15:20:28.384725Z",
-     "shell.execute_reply": "2025-02-03T15:20:28.384097Z"
+     "iopub.execute_input": "2025-02-03T15:40:54.894203Z",
+     "iopub.status.busy": "2025-02-03T15:40:54.893681Z",
+     "iopub.status.idle": "2025-02-03T15:40:57.163213Z",
+     "shell.execute_reply": "2025-02-03T15:40:57.162619Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d02d969",
+   "id": "1e9bd1e5",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "15785039",
+   "id": "8fb6e51f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:28.386904Z",
-     "iopub.status.busy": "2025-02-03T15:20:28.386430Z",
-     "iopub.status.idle": "2025-02-03T15:20:28.390168Z",
-     "shell.execute_reply": "2025-02-03T15:20:28.389624Z"
+     "iopub.execute_input": "2025-02-03T15:40:57.165177Z",
+     "iopub.status.busy": "2025-02-03T15:40:57.164975Z",
+     "iopub.status.idle": "2025-02-03T15:40:57.168790Z",
+     "shell.execute_reply": "2025-02-03T15:40:57.168307Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a8891f",
+   "id": "ec8e78d1",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fd4d812",
+   "id": "d68eee0f",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e1f9ba",
+   "id": "0662c738",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd880b1",
+   "id": "8b82ba42",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "93494353",
+   "id": "c0ea316f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:28.392050Z",
-     "iopub.status.busy": "2025-02-03T15:20:28.391707Z",
-     "iopub.status.idle": "2025-02-03T15:20:28.438117Z",
-     "shell.execute_reply": "2025-02-03T15:20:28.437619Z"
+     "iopub.execute_input": "2025-02-03T15:40:57.170969Z",
+     "iopub.status.busy": "2025-02-03T15:40:57.170521Z",
+     "iopub.status.idle": "2025-02-03T15:40:57.218855Z",
+     "shell.execute_reply": "2025-02-03T15:40:57.218239Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f535c9b",
+   "id": "e57b90be",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f02ba9fe",
+   "id": "4ab4bda4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:28.440091Z",
-     "iopub.status.busy": "2025-02-03T15:20:28.439732Z",
-     "iopub.status.idle": "2025-02-03T15:20:28.513531Z",
-     "shell.execute_reply": "2025-02-03T15:20:28.512928Z"
+     "iopub.execute_input": "2025-02-03T15:40:57.220861Z",
+     "iopub.status.busy": "2025-02-03T15:40:57.220506Z",
+     "iopub.status.idle": "2025-02-03T15:40:57.296487Z",
+     "shell.execute_reply": "2025-02-03T15:40:57.295962Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89a7c0fb",
+   "id": "17b4c830",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd8b9890",
+   "id": "5bea13ea",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e30c762c",
+   "id": "cf769aa3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:28.515679Z",
-     "iopub.status.busy": "2025-02-03T15:20:28.515316Z",
-     "iopub.status.idle": "2025-02-03T15:20:28.546150Z",
-     "shell.execute_reply": "2025-02-03T15:20:28.545582Z"
+     "iopub.execute_input": "2025-02-03T15:40:57.298713Z",
+     "iopub.status.busy": "2025-02-03T15:40:57.298266Z",
+     "iopub.status.idle": "2025-02-03T15:40:57.329452Z",
+     "shell.execute_reply": "2025-02-03T15:40:57.328877Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a29b384a",
+   "id": "f4f475ed",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca92d2b7",
+   "id": "56b5e721",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1817ac6",
+   "id": "50f40ddd",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38cbf9ef",
+   "id": "e4544ba2",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfae526a",
+   "id": "70364b3f",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a76d783",
+   "id": "124714a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:28.548241Z",
-     "iopub.status.busy": "2025-02-03T15:20:28.548038Z",
-     "iopub.status.idle": "2025-02-03T15:20:28.552323Z",
-     "shell.execute_reply": "2025-02-03T15:20:28.551728Z"
+     "iopub.execute_input": "2025-02-03T15:40:57.331756Z",
+     "iopub.status.busy": "2025-02-03T15:40:57.331381Z",
+     "iopub.status.idle": "2025-02-03T15:40:57.335687Z",
+     "shell.execute_reply": "2025-02-03T15:40:57.335003Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89fbbd8",
+   "id": "fce90b27",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "753d3e7b",
+   "id": "822921e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:28.554072Z",
-     "iopub.status.busy": "2025-02-03T15:20:28.553894Z",
-     "iopub.status.idle": "2025-02-03T15:20:28.557322Z",
-     "shell.execute_reply": "2025-02-03T15:20:28.556710Z"
+     "iopub.execute_input": "2025-02-03T15:40:57.337600Z",
+     "iopub.status.busy": "2025-02-03T15:40:57.337238Z",
+     "iopub.status.idle": "2025-02-03T15:40:57.340289Z",
+     "shell.execute_reply": "2025-02-03T15:40:57.339796Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4862cd55",
+   "id": "5d1775d9",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0c3c1c58",
+   "id": "89014247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:28.559098Z",
-     "iopub.status.busy": "2025-02-03T15:20:28.558758Z",
-     "iopub.status.idle": "2025-02-03T15:20:31.216784Z",
-     "shell.execute_reply": "2025-02-03T15:20:31.216245Z"
+     "iopub.execute_input": "2025-02-03T15:40:57.342135Z",
+     "iopub.status.busy": "2025-02-03T15:40:57.341750Z",
+     "iopub.status.idle": "2025-02-03T15:41:00.065750Z",
+     "shell.execute_reply": "2025-02-03T15:41:00.065087Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3bff69",
+   "id": "388036f7",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d2174ed",
+   "id": "5a828a97",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a0c440",
+   "id": "660f0f1c",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aba3900d",
+   "id": "d9add7c6",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "644fd4f2",
+   "id": "dd5e6a6b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:31.219013Z",
-     "iopub.status.busy": "2025-02-03T15:20:31.218629Z",
-     "iopub.status.idle": "2025-02-03T15:20:31.222522Z",
-     "shell.execute_reply": "2025-02-03T15:20:31.221875Z"
+     "iopub.execute_input": "2025-02-03T15:41:00.067971Z",
+     "iopub.status.busy": "2025-02-03T15:41:00.067573Z",
+     "iopub.status.idle": "2025-02-03T15:41:00.071075Z",
+     "shell.execute_reply": "2025-02-03T15:41:00.070421Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb053fe3e20>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f93cfee7e20>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a211ec3",
+   "id": "3d46e050",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43db87ba",
+   "id": "624eb3cd",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff678ffa",
+   "id": "4f0d61c6",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad35f50",
+   "id": "730e8a23",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "63e71e31",
+   "id": "fd45b3f1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:31.224527Z",
-     "iopub.status.busy": "2025-02-03T15:20:31.224204Z",
-     "iopub.status.idle": "2025-02-03T15:20:31.227279Z",
-     "shell.execute_reply": "2025-02-03T15:20:31.226725Z"
+     "iopub.execute_input": "2025-02-03T15:41:00.072950Z",
+     "iopub.status.busy": "2025-02-03T15:41:00.072617Z",
+     "iopub.status.idle": "2025-02-03T15:41:00.075716Z",
+     "shell.execute_reply": "2025-02-03T15:41:00.075247Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d51cb6cc",
+   "id": "acd44b9c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T15:20:31.228961Z",
-     "iopub.status.busy": "2025-02-03T15:20:31.228788Z",
-     "iopub.status.idle": "2025-02-03T15:20:32.306105Z",
-     "shell.execute_reply": "2025-02-03T15:20:32.305547Z"
+     "iopub.execute_input": "2025-02-03T15:41:00.077429Z",
+     "iopub.status.busy": "2025-02-03T15:41:00.077095Z",
+     "iopub.status.idle": "2025-02-03T15:41:01.148819Z",
+     "shell.execute_reply": "2025-02-03T15:41:01.148246Z"
     }
    },
    "outputs": [
